--- a/sandbox/angular-spotify-api/partials/search.html
+++ b/sandbox/angular-spotify-api/partials/search.html
@@ -2,29 +2,12 @@
   <div class="row">
     <div class="col-md-2">
 
-
       <h1>Spotify API AngularJS sandbox</h1>
 
-      Search: <input ng-model="Search" autofocus ng-change="typeSearch(Search)"><br>
-
-<!--
-<span ng-if="Search">
-  {{typeSearch(Search)}}
-  {{1+1}}
-</span>
--->
-
-<!--
-{{'/artists/'+Search}}
-
-<p>{{location.path()}}</p>
--->
+      Search: <input class="main-search" ng-model="Search" autofocus ng-change="typeSearch(Search)"><br>
 
     </div>
-
-    <div class="col-md-10">
-      <!--Body content-->
-
+    <div class="col-md-10" class="main-results">
 
       <ul class="artists">
         <li ng-repeat="items in artists | filter:Search" class="thumbnail">
@@ -33,8 +16,6 @@
 
         </li>
       </ul>
-
-
 
     </div>
   </div>
