additional comments and cleanup

--- a/sandbox/angular-spotify-api/partials/albums.html
+++ b/sandbox/angular-spotify-api/partials/albums.html
@@ -7,7 +7,7 @@
 <ul class="albums">
   <li ng-repeat="items in albums" class="thumbnail">
 
-    <a href="#/tracks/{{items.id}}/{{items.name}}">{{items.name}}</a>
+    <a href="#/tracks/{{items.id}}/{{items.name}}/{{ArtistName}}">{{items.name}}</a>
 
   </li>
 </ul>
