--- a/sandbox/angular-spotify-api/partials/tracks.html
+++ b/sandbox/angular-spotify-api/partials/tracks.html
@@ -9,7 +9,7 @@
 <ul class="tracks">
   <li ng-repeat="items in tracks" class="thumbnail">
 
-    <a href="#/track/{{items.id}}">{{items.name}}</a>
+    <a href="#/track/{{items.id}}/{{items.name}}/{{AlbumName}}/{{ArtistName}}">{{items.name}}</a>
 
   </li>
 </ul>
