Back button working in all pages

--- a/sandbox/angular-spotify-api/partials/search.html
+++ b/sandbox/angular-spotify-api/partials/search.html
@@ -2,10 +2,17 @@
 
 Search by artist name: <input class="main-search" ng-model="Search" autofocus ng-change="typeSearch(Search)"><br>
 
-<ul class="artists">
-  <li ng-repeat="items in artists | filter:Search" class="thumbnail">
+<div ng-if="Search || artists">
 
-  <a href="#/albums/{{items.id}}/{{items.name}}">{{items.name}}</a>
+  <h2>Artists:</h2>
 
-  </li>
-</ul>
+  <ul class="artists">
+    <li ng-repeat="items in artists | filter:Search" class="thumbnail">
+
+    <a href="#/albums/{{items.id}}/{{items.name}}">{{items.name}}</a>
+
+    </li>
+  </ul>
+
+</div>
+
