--- a/sandbox/angular-spotify-api/partials/albums.html
+++ b/sandbox/angular-spotify-api/partials/albums.html
@@ -1,8 +1,10 @@
+<a class="link-back" href="#/artists/{{ArtistName}}">Back</a>
+
 <h1>Spotify API AngularJS sandbox</h1>
 
 <h2>Artist: {{ArtistName}}</h2>
 
-<a class="link-back" href="#/artists/{{ArtistName}}">Back</a>
+<h3>Albums:</h3>
 
 <ul class="albums">
   <li ng-repeat="items in albums" class="thumbnail">
