Better look&feel for Back button + Key Enter detected on the main search box with Albums redirect

--- a/sandbox/angular-spotify-api/partials/albums.html
+++ b/sandbox/angular-spotify-api/partials/albums.html
@@ -1,4 +1,6 @@
-<a class="link-back" href="#/artists/{{ArtistName}}">Back</a>
+<a href="#/artists/{{ArtistName}}">
+  <button type="button" class="btn btn-info">Back</button>
+</a>
 
 <h1>Spotify API AngularJS sandbox</h1>
 
@@ -15,3 +17,7 @@
 
   </li>
 </ul>
+
+<a href="#/artists/{{ArtistName}}">
+  <button type="button" class="btn btn-info">Back</button>
+</a>
