--- a/sandbox/angular-spotify-api/partials/search.html
+++ b/sandbox/angular-spotify-api/partials/search.html
@@ -1,6 +1,11 @@
 <h1>Spotify API AngularJS sandbox</h1>
 
-Search by artist name: <input class="main-search" ng-model="Search" autofocus ng-change="typeSearch(Search)"><br>
+<!--
+Search Box with:
+*Detect every key pressed and update the search calling typeSearch(Search)
+*Detect Enter key presded and send the current Search to typeEnter(Search)
+-->
+Search by artist name: <input class="main-search" ng-model="Search" autofocus ng-change="typeSearch(Search)" ng-keyup="$event.keyCode == 13 && typeEnter(Search)" ><br>
 
 <!-- Only present list when there is something to show -->
 <div ng-if="artists[0].name != undefined && Search != '' ">
