--- a/sandbox/angular-spotify-api/partials/tracks.html
+++ b/sandbox/angular-spotify-api/partials/tracks.html
@@ -1,4 +1,6 @@
-<a class="link-back" href="#/albums/{{tracks[0].artists[0].id}}/{{ArtistName}}">Back</a>
+<a class="link-back" href="#/albums/{{tracks[0].artists[0].id}}/{{ArtistName}}">
+  <button type="button" class="btn btn-info">Back</button>
+</a>
 
 <h1>Spotify API AngularJS sandbox</h1>
 
@@ -15,3 +17,7 @@
 
   </li>
 </ul>
+
+<a class="link-back" href="#/albums/{{tracks[0].artists[0].id}}/{{ArtistName}}">
+  <button type="button" class="btn btn-info">Back</button>
+</a>
