Added Album thumbnail at Tracks and Play

--- a/sandbox/angular-spotify-api/partials/play.html
+++ b/sandbox/angular-spotify-api/partials/play.html
@@ -8,6 +8,8 @@
 
 <h3>Album: {{AlbumName}}</h3>
 
+<img ng-src="{{AlbumThumbnail}}">
+
 <h4>Track: {{TrackName}}</h4>
 
 <div ng-if="track.preview_url">
