Back button links more semantic

--- a/sandbox/angular-spotify-api/partials/albums.html
+++ b/sandbox/angular-spotify-api/partials/albums.html
@@ -2,7 +2,9 @@
   <button type="button" class="btn btn-info">Back</button>
 </a>
 
-<h1>Spotify API AngularJS sandbox</h1>
+<a href="#/artists/{{ArtistName}}">
+  <h1>Spotify API AngularJS sandbox</h1>
+</a>
 
 <h2>Artist: {{ArtistName}}</h2>
 
