--- a/sandbox/angular-spotify-api/partials/play.html
+++ b/sandbox/angular-spotify-api/partials/play.html
@@ -1,14 +1,17 @@
-<a class="link-back" href="#/tracks/{{track.album.id}}/{{AlbumName}}/{{ArtistName}}">
+<a class="link-back" href="#/tracks/{{AlbumId}}/{{AlbumName}}/{{ArtistName}}">
 	<button type="button" class="btn btn-info">Back</button>
 </a>
 
 <h1>Spotify API AngularJS sandbox</h1>
 
-<h2>Artist: {{ArtistName}}</h2>
+<a href="#/albums/{{ArtistId}}/{{ArtistName}}">
+	<h2>Artist: {{ArtistName}}</h2>
+</a>
 
-<h3>Album: {{AlbumName}}</h3>
-
-<img ng-src="{{AlbumThumbnail}}">
+<a href="#/tracks/{{AlbumId}}/{{AlbumName}}/{{ArtistName}}">
+	<h3>Album: {{AlbumName}}</h3>
+	<img ng-src="{{AlbumThumbnail}}">
+</a>
 
 <h4>Track: {{TrackName}}</h4>
 
