Album year available for Tracks and Play

--- a/sandbox/angular-spotify-api/partials/play.html
+++ b/sandbox/angular-spotify-api/partials/play.html
@@ -9,7 +9,7 @@
 </a>
 
 <a href="#/tracks/{{AlbumId}}/{{AlbumName}}/{{ArtistName}}">
-	<h3>Album: {{AlbumName}}</h3>
+	<h3>Album: {{AlbumName}} ({{AlbumYear}})</h3>
 	<img ng-src="{{AlbumThumbnail}}">
 </a>
 
