--- a/sandbox/angular-spotify-api/partials/tracks.html
+++ b/sandbox/angular-spotify-api/partials/tracks.html
@@ -8,7 +8,7 @@
   <h2>Artist: {{ArtistName}}</h2>
 </a>
 
-<h3>Album: {{AlbumName}}</h3>
+<h3>Album: {{AlbumName}} ({{AlbumYear}})</h3>
 
 <img ng-src="{{AlbumThumbnail}}">
 
